css/style.css
/* ... */
div.map {
	height: 400px;
}

div#panel-2 {
	background-color: rgba(23, 22, 22, 0.95);
	padding: 60px 0;
}

body.home ul#portfolio {
	overflow: hidden;
}

body.home ul#portfolio li.move-it {
	margin:0;
}

body.home ul#portfolio li.alt {
	margin:0;
}

body.home ul#portfolio li img {
	position: relative;
}

div.second-row {
	display: inline-block;
	margin-top: -132px;
}

div.third-row {
	display: inline-block;
	margin-top: -264px;
}

div.full-width {
	max-width: none;
}

body.home #panel-3 .panel-container {
	background-color: #000;
	overflow: hidden;
	height:100%;
}

#video,
#audio,
#photography,
#design {
	width: 50%;
	padding: 0;
	position: relative;
	background-color: #000;
	cursor: pointer;
}

#video h2,
#audio h2,
#photography h2,
#design h2 {
	font-size: 61px;
	letter-spacing: 5px;
	word-spacing: 19px;
	text-transform: uppercase;
	position: absolute;
	z-index: 10;
	font-weight: normal
}

#video h2:after,
#audio h2:after,
#photography h2:after,
#design h2:after {
	content: url( ../img/header-caret.png );
	position: relative;
	top: 1px;
	left: 4px
}

#video:before,
#audio:before,
#photography:before,
#design:before {
	content: "";
	display: block;
	padding-top: 54.0625%;
}

.services-container {
	position:  absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
}

div.img {
	background-color: rgba(44, 46, 48, .3);
	position: relative;
	z-index: 1;
	opacity: .3
}

div.img {
	-webkit-transition: opacity .25s ease-in-out;
	-moz-transition: opacity .25s ease-in-out;
	-o-transition: opacity .25s ease-in-out;
	transition: opacity .25s ease-in-out;
}

div.img:hover {
	opacity: .5
}

#video img,
#audio img,
#photography img,
#design img {
	width: 100%;
}

#video {
	float: left;
}

#audio {
	float: right;
}

#photography {
	float: left;
	clear: left;
	margin-bottom: -.25%;
}

#design {
	float: right;
	clear: right;
	margin-bottom: -.25%;
}

span.telephone {
	cursor: default;
}

div.colophon {
	background: #161616;
	padding: 25px 0 0 0;
}

p.copyright {
	font-family : 'myriad-pro', 'Myriad Pro', Myriad, sans-serif;
	font-size: 14px;
}

div.social {
	width: 250px;
	float: right;
	margin-top: -45px;
}

div.social ul {
	display: inline;
}

div.social li {
	display: inline;
	width:100px;
	overflow: hidden;
}

a.genericon {
	margin-right: 10px;
	border-radius: 50%;
	height:18px;
	width: 18px;
	padding: 7px;
	background-color: #0048BB;
	font-size: 17px;
	-o-transition:color .2s ease-out, background .2s ease-in;
	-ms-transition:color .2s ease-out, background .2s ease-in;
	-moz-transition:color .2s ease-out, background .2s ease-in;
	-webkit-transition:color .2s ease-out, background .2s ease-in;
	transition:color .2s ease-out, background .2s ease-in;
	color: #161616;
}

a.genericon:hover {
	background-color: #FFF;
}

div.social li.linkedin a.genericon {
	font-size: 27px;
	padding: 2px 11px 12px 3px
}

div.social li.twitter a.genericon {
	padding: 8px 6px 6px 8px;
}

div.social li.facebook a.genericon {
	font-size: 21px;
	padding: 6px 9px 8px 5px;
}

div.social li.vimeo a.genericon {
	padding: 8px 7px 6px;
}

/** WHO WE ARE **/
body.who #panel-2 h2 {
	color: #0048BB;
	letter-spacing: 0;
	word-spacing: 0
}
body.who #panel-2 .content-2 h2 span.heading {
	letter-spacing: 0;
	word-spacing: 0;
	line-height: 78px;
}

body.who #panel-2 p {
	width: 920px;
	font-size: 30px;
	text-align: justify;
}

body.who #panel-2 div.panel-container {
	height: 585px;
	overflow: scroll;
}

div.content-1,
div.content-2 {
	width: 100%;
	margin: 0 auto;
	padding-bottom: 60px;
}

div.content-2 ul#portfolio {
	float: right;
	margin: 0 46px 0 0 ;
}

div.content-2 ul#portfolio li {
	float: left;
	width: 141px;
	height: 79px;
	display: inline-block;
	margin: -60px 0 0 -39px;
}

div.content-2 ul#portfolio li img {
	max-width: 50%;
	max-height: 50%;
}

body.who div.content-2 h2 {
	float: left;
	width: 340px;
	padding: 0;
	margin: -11px 0 0 0;
}

body.who #panel-2 div.content-2 p {
	font-size: 26px;
}

body.who div#panel-3 {
	background-color: rgba( 255, 255, 255, .93 );
}

canvas#demo,
canvas#reel {
	position: relative;
	z-index: 1;
	width: 100%;
	opacity: .95;
}

h2.jordan {
	letter-spacing: -1px;
	word-spacing: 3px;
}

.bio {
	overflow: auto;
	position: relative;
	margin-top: 50px;
}

.bio img {
	float: left;
	margin-right: 40px;
}

.bio.right img {
	float: right;
	margin-left: 40px;
	margin-right: 0;
}

.bio h2 {
	font-family: 'futura-pt', Futura, "Trebuchet MS", Arial, sans-serif;
	font-size: 25px;
	font-weight: 500;
	text-transform: uppercase;
	color: #0048BB;
	margin-top: 180px;
	margin-bottom: -10px;
}

.bio p {
	color: #000;
	line-height: 24px;
}

/** BIG VIDEO **/
#big-video-wrap {
    overflow: hidden;
    position: fixed;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    z-index: 0;
}
#big-video-vid,
#big-video-image {
    position: absolute
}
#big-video-control-container {
    position: fixed;
    bottom: 20px;
    padding: 0 20px;
    width: 100%;
    -webkit-transition-duration: 0.6s;
    -moz-transition-duration: 0.6s;
    -ms-transition-duration: 0.6s;
    -o-transition-duration: 0.6s;
    transition-duration: 0.6s;
}
#big-video-control {
    width: 100%;
    height: 16px;
    position: relative;
}
#big-video-control-middle {
    margin: 0 56px 0 24px
}
#big-video-control-bar {
    width: 100%;
    height: 16px;
    position: relative;
    cursor: pointer;
}
#big-video-control-progress {
    position: absolute;
    top: 7px;
    height: 3px;
    width: 0%;
    background: #fff;
}
#big-video-control-track {
    position: absolute;
    top: 8px;
    height: 1px;
    width: 100%;
    background: #fff;
}
#big-video-control-bound-left {
    left: 0
}
#big-video-control-bound-right {
    right: -1px
}
#big-video-control-track .ui-slider-handle {
    opacity: 0
}
#big-video-control-playhead {
    left: 30%
}
#big-video-control-play {
    position: absolute;
    top: 0;
    left: 0;
    height: 16px;
    width: 16px;
    background-image: url('bigvideo.png');
}
/* ... */

